[tool.poetry]
name = "dungeon-and-dragons"
version = "0.1.0"
description = ""
authors = ["Soheil"]
readme = "README.md"
packages = [{include = "dungeon_and_dragons"}]

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pyment = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
